@startuml
' ============================================================================
' PETCare - Esquema de base de datos petcaredb (ERD)
' Base compartida por backend, reservation-service, payment-service y
' saga-orchestrator. Se omiten columnas de auditoría uniformes:
' created_at, updated_at, deleted, version.
' ============================================================================

title Esquema de base de datos petcaredb

hide circle
skinparam linetype ortho
skinparam entity {
  BackgroundColor #D9E2F3
  BorderColor #052F61
  FontColor #08427B
}

' ============================================================================
' Seguridad y catálogos
' ============================================================================
entity "estado_reserva" as er {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(50)
  descripcion : TEXT
  color : VARCHAR(7)
  icono : VARCHAR(50)
  orden : INTEGER
}

entity "ciudad" as ci {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100) <<UQ>>
  * codigo : VARCHAR(10) <<UQ>>
  latitud : NUMERIC(10,7)
  longitud : NUMERIC(10,7)
}

entity "estado" as es {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
  * codigo : VARCHAR(10)
  ciudad_id : BIGINT
}

entity "direccion" as di {
  * id : BIGSERIAL <<PK>>
  --
  * calle : VARCHAR(200)
  numero : VARCHAR(20)
  piso : VARCHAR(10)
  apartamento : VARCHAR(20)
  latitud : NUMERIC(10,7)
  longitud : NUMERIC(10,7)
  referencia : TEXT
  * ciudad_id : BIGINT
  estado_id : BIGINT
}

entity "persona" as pe {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
  * primer_apellido : VARCHAR(100)
  segundo_apellido : VARCHAR(100)
  * ci : VARCHAR(20) <<UQ>>
  telefono : VARCHAR(20)
  email : VARCHAR(150) <<UQ>>
  fecha_nacimiento : DATE
  * genero : CHAR(1)
  direccion_id : BIGINT
}

entity "rol" as ro {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(50) <<UQ>>
  descripcion : TEXT
  activo : BOOLEAN
}

entity "usuario" as us {
  * id : BIGSERIAL <<PK>>
  --
  * username : VARCHAR(50) <<UQ>>
  * password : VARCHAR(255)
  * persona_id : BIGINT
  activo : BOOLEAN
  ultimo_acceso : TIMESTAMP
  intentos_fallidos : INTEGER
  bloqueado : BOOLEAN
  token_refresh : TEXT
}

entity "usuario_rol" as ur {
  * id : BIGSERIAL <<PK>>
  --
  * usuario_id : BIGINT
  * rol_id : BIGINT
}

entity "menu" as me {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100) <<UQ>>
  descripcion : TEXT
  icono : VARCHAR(50)
  url : VARCHAR(200)
  orden : INTEGER
  activo : BOOLEAN
}

entity "submenu" as su {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
  descripcion : TEXT
  icono : VARCHAR(50)
  url : VARCHAR(200)
  orden : INTEGER
  * menu_id : BIGINT
  activo : BOOLEAN
}

entity "permiso" as pe2 {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(150)
  * rol_id : BIGINT
  * menu_id : BIGINT
  submenu_id : BIGINT
  crear : BOOLEAN
  leer : BOOLEAN
  actualizar : BOOLEAN
  eliminar : BOOLEAN
}

entity "sucursal" as su2 {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
  direccion_id : BIGINT
  telefono : VARCHAR(20)
  email : VARCHAR(150)
  horario_apertura : TIME
  horario_cierre : TIME
  latitud : NUMERIC(10,7)
  longitud : NUMERIC(10,7)
  activa : BOOLEAN
}

entity "notificacion" as no {
  * id : BIGSERIAL <<PK>>
  --
  * usuario_id : BIGINT
  * titulo : VARCHAR(200)
  * mensaje : TEXT
  * tipo : VARCHAR(30)
  leida : BOOLEAN
  fecha_lectura : TIMESTAMP
}

entity "bitacora" as bi {
  * id : BIGSERIAL <<PK>>
  --
  usuario_id : BIGINT
  * accion : VARCHAR(50)
  * entidad : VARCHAR(100)
  entidad_id : BIGINT
  datos_anteriores : TEXT
  datos_nuevos : TEXT
  ip_address : VARCHAR(45)
  user_agent : TEXT
}

entity "correo_enviado" as co {
  * id : BIGSERIAL <<PK>>
  --
  * destino : VARCHAR(150)
  * asunto : VARCHAR(200)
  * cuerpo : TEXT
  * tipo : VARCHAR(30)
  * estado : VARCHAR(20)
  error_mensaje : TEXT
  fecha_envio : TIMESTAMP
}

' ============================================================================
' Mascotas y salud
' ============================================================================
entity "especie" as esp {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(50) <<UQ>>
  descripcion : TEXT
}

entity "raza" as ra {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
  * especie_id : BIGINT
  descripcion : TEXT
}

entity "vacuna" as va {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100) <<UQ>>
  descripcion : TEXT
  periodicidad_meses : INTEGER
}

entity "registro_vacunacion" as rv {
  * id : BIGSERIAL <<PK>>
  --
  * mascota_id : BIGINT
  * vacuna_id : BIGINT
  * fecha_aplicacion : DATE
  fecha_vencimiento : DATE
  lote : VARCHAR(50)
  veterinario : VARCHAR(150)
  observaciones : TEXT
  certificado_url : VARCHAR(500)
}

' ============================================================================
' Clientes y proveedores
' ============================================================================
entity "cliente" as cl {
  * id : BIGSERIAL <<PK>>
  --
  * persona_id : BIGINT
  * usuario_id : BIGINT
  notas : TEXT
}

entity "mascota" as ma {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
  fecha_nacimiento : DATE
  * genero : CHAR(1)
  peso : NUMERIC(6,2)
  color : VARCHAR(50)
  imagen_url : VARCHAR(500)
  * especie_id : BIGINT
  raza_id : BIGINT
  * cliente_id : BIGINT
}

entity "proveedor" as pr {
  * id : BIGSERIAL <<PK>>
  --
  * persona_id : BIGINT
  * usuario_id : BIGINT
  empresa : VARCHAR(150)
  latitud : NUMERIC(10,7)
  longitud : NUMERIC(10,7)
  radio_cobertura_km : NUMERIC(5,2)
  descripcion : TEXT
  verificado : BOOLEAN
  calificacion : NUMERIC(3,2)
}

entity "servicio" as se {
  * id : BIGSERIAL <<PK>>
  --
  * nombre : VARCHAR(100) <<UQ>>
  descripcion : TEXT
  * duracion_minutos : INTEGER
  * precio_base : NUMERIC(10,2)
  imagen_url : VARCHAR(500)
  activo : BOOLEAN
  categoria : VARCHAR(50)
}

entity "proveedor_especialidad" as pre {
  * id : BIGSERIAL <<PK>>
  --
  * proveedor_id : BIGINT
  * servicio_id : BIGINT
  * requiere_certificado : BOOLEAN
}

entity "proveedor_servicio" as ps {
  * id : BIGSERIAL <<PK>>
  --
  * proveedor_id : BIGINT
  * nombre : VARCHAR(100)
  descripcion : TEXT
  * categoria : VARCHAR(30)
  * duracion_minutos : INTEGER
  * precio_base : NUMERIC(10,2)
  requiere_certificado : BOOLEAN
  activo : BOOLEAN
}

entity "proveedor_servicio_modalidad" as psm {
  * id : BIGSERIAL <<PK>>
  --
  * proveedor_servicio_id : BIGINT
  * modalidad : VARCHAR(30)
  * costo_adicional : NUMERIC(10,2)
  activo : BOOLEAN
}

entity "disponibilidad" as dis {
  * id : BIGSERIAL <<PK>>
  --
  * proveedor_id : BIGINT
  * servicio_id : BIGINT
  * dia_semana : INTEGER
  * hora_inicio : TIME
  * hora_fin : TIME
  activo : BOOLEAN
}

' ============================================================================
' Reserva, pago y promociones
' ============================================================================
entity "reserva" as re {
  * id : BIGSERIAL <<PK>>
  --
  * codigo : VARCHAR(20) <<UQ>>
  * cliente_id : BIGINT
  proveedor_id : BIGINT
  * servicio_id : BIGINT
  * mascota_id : BIGINT
  * estado_reserva_id : BIGINT
  fecha_reserva : TIMESTAMP
  * fecha_inicio : TIMESTAMP
  fecha_fin : TIMESTAMP
  * hora_inicio : TIME
  hora_fin : TIME
  latitud : NUMERIC(10,7)
  longitud : NUMERIC(10,7)
  direccion_referencia : TEXT
  notas : TEXT
  * precio_total : NUMERIC(10,2)
  motivo_rechazo : TEXT
  respuesta_en : TIMESTAMP
  modalidad_entrega : VARCHAR(30)
  registro_vacunacion_id : BIGINT
}

entity "solicitud_reserva" as sr {
  * id : BIGSERIAL <<PK>>
  --
  * reserva_id : BIGINT
  * codigo : VARCHAR(20)
  * cliente_id : BIGINT
  cliente_nombre : VARCHAR(255)
  * proveedor_id : BIGINT
  proveedor_empresa : VARCHAR(150)
  * servicio_id : BIGINT
  servicio_nombre : VARCHAR(100)
  mascota_id : BIGINT
  mascota_nombre : VARCHAR(100)
  fecha_inicio : TIMESTAMP
  hora_inicio : TIME
  precio_total : NUMERIC(10,2)
  modalidad_entrega : VARCHAR(30)
  * estado : VARCHAR(20)
  motivo_rechazo : TEXT
  latitud : NUMERIC(10,7)
  longitud : NUMERIC(10,7)
  direccion_referencia : TEXT
  registro_vacunacion_id : BIGINT
  creada_en : TIMESTAMP
  respondida_en : TIMESTAMP
}

entity "pago" as pa {
  * id : BIGSERIAL <<PK>>
  --
  * reserva_id : BIGINT
  * monto : NUMERIC(10,2)
  * metodo_pago : VARCHAR(30)
  * estado_pago : VARCHAR(20)
  referencia_transaccion : VARCHAR(100)
  fecha_pago : TIMESTAMP
  comprobante_url : VARCHAR(500)
  modalidad_pago : VARCHAR(20)
  intencion_id : VARCHAR(100)
  monto_original : NUMERIC(10,2)
  descuento_total : NUMERIC(10,2)
  estado_sync : VARCHAR(20)
  descuento_id : BIGINT
  descuento_codigo : VARCHAR(30)
  descuento_nombre : VARCHAR(100)
  descuento_tipo : VARCHAR(20)
  descuento_servicio_id : BIGINT
}

entity "promocion" as prm {
  * id : BIGSERIAL <<PK>>
  --
  * codigo : VARCHAR(30) <<UQ>>
  * nombre : VARCHAR(100)
  descripcion : TEXT
  * tipo_descuento : VARCHAR(20)
  * valor_descuento : NUMERIC(10,2)
  * fecha_inicio : TIMESTAMP
  * fecha_fin : TIMESTAMP
  activa : BOOLEAN
  limite_usos : INTEGER
  * usos_actuales : INTEGER
  proveedor_id : BIGINT
  servicio_id : BIGINT
}

entity "promocion_local" as pl {
  * id : BIGSERIAL <<PK>>
  --
  * promocion_id : BIGINT
  * reserva_id : BIGINT
  * monto_descuento : NUMERIC(10,2)
  fecha_aplicacion : TIMESTAMP
}

' ============================================================================
' Saga / eventos / outbox
' ============================================================================
entity "saga_estado" as sge {
  * id : BIGSERIAL <<PK>>
  --
  * reserva_id : BIGINT <<UQ>>
  * codigo_reserva : VARCHAR(20)
  * estado : VARCHAR(30)
  paso_actual : VARCHAR(255)
  motivo : TEXT
  ultimo_evento_id : VARCHAR(64)
  creada_en : TIMESTAMP
  actualizada_en : TIMESTAMP
}

entity "evento_procesado" as ev {
  * event_id : VARCHAR(64) <<PK>>
  --
  * event_type : VARCHAR(100)
  * service : VARCHAR(50)
  aggregate_id : BIGINT
  payload : TEXT
  procesado_en : TIMESTAMP
}

entity "outbox" as ob {
  * id : BIGSERIAL <<PK>>
  --
  * event_id : VARCHAR(64)
  * aggregate_type : VARCHAR(50)
  aggregate_id : BIGINT
  * event_type : VARCHAR(100)
  * topic : VARCHAR(100)
  * payload : TEXT
  * status : VARCHAR(20)
  * retry_count : INTEGER
  last_error : TEXT
  created_at : TIMESTAMP
  processed_at : TIMESTAMP
  next_retry_at : TIMESTAMP
}

' ============================================================================
' Relaciones
' ============================================================================
es }o--|| ci : "ciudad_id"
di }o--|| ci : "ciudad_id"
di }o--o| es : "estado_id"
pe }o--o| di : "direccion_id"
us ||--|| pe : "persona_id"
ur }o--|| us : "usuario_id"
ur }o--|| ro : "rol_id"
su }o--|| me : "menu_id"
pe2 }o--|| ro : "rol_id"
pe2 }o--|| me : "menu_id"
pe2 }o--o| su : "submenu_id"
su2 }o--o| di : "direccion_id"
no }o--|| us : "usuario_id"
bi }o--o| us : "usuario_id"

ra }o--|| esp : "especie_id"
rv }o--|| ma : "mascota_id"
rv }o--|| va : "vacuna_id"
ma }o--|| esp : "especie_id"
ma }o--o| ra : "raza_id"
ma }o--|| cl : "cliente_id"
cl ||--|| pe : "persona_id"
cl ||--|| us : "usuario_id"

pr ||--|| pe : "persona_id"
pr ||--|| us : "usuario_id"
pre }o--|| pr : "proveedor_id"
pre }o--|| se : "servicio_id"
ps }o--|| pr : "proveedor_id"
psm }o--|| ps : "proveedor_servicio_id"
dis }o--|| pr : "proveedor_id"
dis }o--|| se : "servicio_id"
prm }o--o| pr : "proveedor_id"
prm }o--o| ps : "servicio_id"

re }o--|| cl : "cliente_id"
re }o--o| pr : "proveedor_id"
re }o--|| se : "servicio_id"
re }o--|| ma : "mascota_id"
re }o--|| er : "estado_reserva_id"
re }o--o| rv : "registro_vacunacion_id"
sr ||--|| re : "reserva_id"
sr }o--|| pr : "proveedor_id"
sr }o--o| rv : "registro_vacunacion_id"
pa }o--|| re : "reserva_id"
pl }o--|| prm : "promocion_id"
pl }o--|| re : "reserva_id"
sge }o--|| re : "reserva_id"

legend right
  = petcaredb =
  backend (8080) + reservation-service (8081) +
  payment-service (8083) + saga-orchestrator (8085).
  Cada servicio toca sus propias tablas.
  Las columnas created_at, updated_at, deleted y version
  se omiten por ser uniformes (presentes en todas las tablas).
endlegend

@enduml
